# Raw-Order-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h  test
bench_results/baseline/: analysis.txt
bench_results/baseline/run_1/: CANCEL_ORDER.txt  GET_ORDERS.txt
bench_results/baseline/run_2/: CANCEL_ORDER.txt  GET_ORDERS.txt
bench_results/baseline/run_3/: CANCEL_ORDER.txt  GET_ORDERS.txt
bench_results/baseline/run_4/: CANCEL_ORDER.txt  GET_ORDERS.txt
bench_results/baseline/run_5/: CANCEL_ORDER.txt  GET_ORDERS.txt
bench_results/with_order_and_message_reserve/: analysis.txt
bench_results/with_order_and_message_reserve/run_1/: CANCEL_ORDER.txt  GET_ORDERS.txt  SUBMIT_ORDER.txt
bench_results/with_order_and_message_reserve/run_2/: CANCEL_ORDER.txt  GET_ORDERS.txt  SUBMIT_ORDER.txt
bench_results/with_order_and_message_reserve/run_3/: CANCEL_ORDER.txt  GET_ORDERS.txt  SUBMIT_ORDER.txt
bench_results/with_order_and_message_reserve/run_4/: CANCEL_ORDER.txt  GET_ORDERS.txt  SUBMIT_ORDER.txt
bench_results/with_order_and_message_reserve/run_5/: CANCEL_ORDER.txt  GET_ORDERS.txt  SUBMIT_ORDER.txt
bench_results/with_order_reserve/: analysis.txt
bench_results/with_order_reserve/run_1/: CANCEL_ORDER.txt  GET_ORDERS.txt  SUBMIT_ORDER.txt
bench_results/with_order_reserve/run_2/: CANCEL_ORDER.txt  GET_ORDERS.txt  SUBMIT_ORDER.txt
docs/: PROTOCOL.md
includes/: enum_name.h  latency.h  order_book.h  protocol.h  serializer.h  server_base.h  server_tcp.h  tcp_helpers.h  user.h
learning/: server.cpp  server_base.h  server_main.cpp  server_tcp.h  server_udp.h  test.cpp  user.cpp
scripts/: analyze.py  bench.sh  menu.sh
src/: float_serializer.cpp  latency.cpp  order_book.cpp  serializer.cpp  server_base.cpp  server_tcp.cpp  server_udp.cpp  user.cpp  user_spawner.cpp
tests/: test_order_book.cpp  test_serializer.cpp  test_stress.cpp
(+9 files in other folders)
